--- a/css_basic/base.css
+++ b/css_basic/base.css
@@ -59,14 +59,14 @@ fieldset,
 form,
 label,
 legend,
-table,
+/* table, */
 caption,
 tbody,
 tfoot,
 thead,
-tr,
+/* tr,
 th,
-td,
+td, */
 article,
 aside,
 canvas,
@@ -148,9 +148,9 @@ header {
   border-bottom: 1px solid rgb(221, 221, 221);
   transition: border-bottom-color 1s ease;
 }
-header a {
+/* header a {
   color: rgba(0, 0, 0, 0.8);
-}
+} */
 aside {
   background: #fafafa;
 }
@@ -159,12 +159,12 @@ aside p {
   background: #ddd;
   color: black;
 }
-footer a {
+/* footer a {
   color: rgba(0, 0, 0, 0.8);
-}
-a {
+} */
+/* a {
   color: #f80002;
-}
+} */
 
 /* Positioning and margins */
 
